fix success message not showing

--- a/style.less
+++ b/style.less
@@ -170,7 +170,7 @@ body {
 
             &.info, &.warning, &.error { display: none; }
         }
-        &.info .info, &.warning .warning, &.error .error { display: block; }
+        &.showInfo .info, &.showWarnings .warning, &.showErrors .error { display: block; }
     }
 
     #render-container {
